--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^4.5.10",
     "morgan": "~1.7.0",
     "multer": "^0.1.6",
+    "open": "0.0.5",
     "serve-favicon": "~2.3.0"
   }
 }
